# Image-Registration

./: README.md
2DMachadoMIOptimizer/: CMakeLists.txt
2DMachadoMIRunner/debug/: MachadoMIRunner.cbp  Makefile  performance.csv
Bash scripts/: BashCSVOrganizer  BashDispFieldComparison  BashDispFieldComparisonNonNorm  BashFieldGenerator  BashFieldGeneratorGTruth  BashMaskResampler  BashOrganizer  BashRegistrationrunner  CLIrunner
CompleteResults/NonNormResults/: all.csv  totalRes-004.csv  totalRes-011.csv  totalRes-015.csv  totalRes-019.csv
CompleteResults/NormResults/: all.csv  totalRes-008.csv  totalRes-015.csv  totalRes-018.csv  totalRes-020.csv  totalRes-022.csv
CompleteResultsGregsProject/NonNormResults/: totalRes-001.csv  totalRes-008.csv  totalRes-009.csv  totalRes-018.csv  totalRes-020.csv  totalRes-022.csv
CompleteResultsGregsProject/NormResults/: totalRes-001.csv  totalRes-004.csv  totalRes-009.csv  totalRes-011.csv  totalRes-019.csv
DispFieldGenerator/: CMakeLists.txt  DispFieldGenerator.cxx
DispFieldGenerator/debug/: .ninja_log  DispFieldGenerator.cbp  build.ninja  cmake_install.cmake  rules.ninja
GeneralMachadoMIOptimizer/: CMakeLists.txt  GeneralMachadoMIOptimizer.cxx
GeneralMachadoMIOptimizer/debug/: .ninja_deps  (+6 more)
NonNormalizedTestedAlgorithms/2DMachadoMIRunner/: CMakeLists.txt
NonNormalizedTestedAlgorithms/2DMachadoMIRunner/debug/: CMakeCache.txt  cmake_install.cmake
NonNormalizedTestedAlgorithms/2DMachadoMIRunner/debug/.cmake/api/v1/reply/: codemodel-v2-89d34d460356b39743af.json  target-MachadoMIRunner-Debug-43b4fb0d4ef099b96a71.json
(+112 files in other folders)
